[project]
name = "operation-fogline"
version = "1.0.0"
description = "A modular data-transmission simulator for frame design, error control, multiplexing, and adaptive communication experiments."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Sepehr Rajabi"}
]
keywords = ["data transmission", "communication systems", "error control", "multiplexing", "simulation", "education"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Scientific/Engineering",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
